--- a/app/javascript/packs/BusinessList/BusinessList.css
+++ b/app/javascript/packs/BusinessList/BusinessList.css
@@ -1,7 +1,15 @@
 .BusinessList {
-  width: 30%;
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin: 2.4rem;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 36%;
+  max-height: 600px;
+  overflow-y: scroll;
+  margin: 1.8rem 0 0 0;
+}
+
+@media only screen and (max-width: 780px) {
+  .BusinessList {
+    width: 100%;
+  }
 }
