add custom map markers
show info window for each marker

--- a/app/javascript/packs/Business/Business.css
+++ b/app/javascript/packs/Business/Business.css
@@ -54,6 +54,7 @@
 .Business-reviews {
   display: flex;
   flex-direction: row;
+  align-items: center;
   text-align: left;
 }
 
@@ -66,5 +67,5 @@
 }
 .Business-reviews .user-ratings-total {
   font-size: .8rem;
-  color: #ddd;
+  color: #AAA;
 }
