--- a/app/javascript/packs/Header/Header.css
+++ b/app/javascript/packs/Header/Header.css
@@ -1,13 +1,13 @@
 .page-header {
   background-color: #fff;
   width: 100%;
-  padding: 20px;
   box-shadow: 0px 2px 6px 2px #E8E8E8;
 }
 
 .header-container {
   display: flex;
   max-width: 1024px;
+  padding: 20px;
   margin: 0 auto;
   justify-content: space-between;
 }
@@ -34,4 +34,15 @@
   align-items: center;
   width: auto;
   margin-right: 20px;
+}
+
+@media only screen and (max-width: 780px) {
+  .header-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .search-filter-container {
+    margin-top: 20px;
+  }
 }
