--- a/app/javascript/packs/components/SearchBar/SearchBar.css
+++ b/app/javascript/packs/components/SearchBar/SearchBar.css
@@ -41,13 +41,15 @@
 }
 
 .SearchBar-fields input {
-  width: 304px;
+  font-family: 'Proxima Nova', Arial, sans-serif;
+  width: 302px;
   padding: .66rem 1rem;
   margin-right: 2.22rem;
   border-radius: 10px;
   border: 1px solid #ddd;
-  font-size: .8rem;
-  font-weight: 500;
+  font-size: .7rem;
+  color: #7f7f7f;
+  font-weight: 600;
   box-shadow: 0px 2px 2px 0px rgb(0 0 0 / 10%)
 }
 
@@ -65,7 +67,7 @@
 
 .SearchBar-submit .search-icon {
   fill: #438a14;
-  width: 1em;
+  width: .8em;
   height: 1em;
 }
 .SearchBar-submit .search-icon:hover {
