--- a/app/javascript/packs/components/BusinessList/BusinessList.css
+++ b/app/javascript/packs/components/BusinessList/BusinessList.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 36%;
+  width: 31%;
   max-height: 550px;
   overflow-y: scroll;
-  margin: 1.8rem 0 0 0;
+  margin-top: 1.5rem;
 }
 
 @media only screen and (max-width: 780px) {
