--- a/app/javascript/packs/components/FilterButton/FilterButton.css
+++ b/app/javascript/packs/components/FilterButton/FilterButton.css
@@ -1,13 +1,13 @@
 .filter {
-  margin-right: 20px;
+  margin-right: 15px;
 }
 
 .filter .filter-button {
   background: #fff;
-  padding: 4px;
+  padding: 7px 2px;
   border: 1px solid #ddd;
   color: #828282;
-  font-size: .9em;
+  font-size: .65em;
   font-weight: 100;
   border-radius: 10px;
   text-transform: capitalize;
@@ -41,11 +41,16 @@
   stroke: #438a14;
 }
 
-.filter-menu-item .filter-item-text span {
-  font-size: .7em;
+.MuiTypography-root.MuiFormControlLabel-label.MuiTypography-body1 {
+  font-family: 'Proxima Nova', Arial, sans-serif;
+  font-size: .8em;
   font-weight: 100;
-  margin-left: 5px;
+  margin-left: 0px;
   color: #828282;
+}
+.filter-label-text .PrivateSwitchBase-root-4 {
+  padding: 5px;
+  margin-left:9px;
 }
 
 .apply-button-container {
