--- a/app/javascript/packs/components/Header/Header.css
+++ b/app/javascript/packs/components/Header/Header.css
@@ -24,9 +24,9 @@
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 200;
   color: #ccc;
-  margin: 0 0 0 10px;
+  margin: -3px 0 0 10px;
   letter-spacing: 1px;
-  line-height: 1.5rem;
+  line-height: 0;
 }
 
 .search-filter-container {
