--- a/app/javascript/packs/components/FilterButton/FilterButton.css
+++ b/app/javascript/packs/components/FilterButton/FilterButton.css
@@ -7,16 +7,17 @@
   padding: 5px 2px;
   border: 1px solid #ddd;
   color: #828282;
-  font-size: .65em;
+  font-size: 11px;
   font-weight: 100;
   border-radius: 6px;
   text-transform: capitalize;
   box-shadow: none;
   min-width: 50px;
 }
+
 .filter .filter-button:hover {
-  background-color: #438a14;
-  border: 1px solid #438a14;
+  background-color: #428a13;
+  border: 1px solid #428a13;
   color: #fff;
 }
 
@@ -37,9 +38,10 @@
 .filter-menu-item .filter-item-icon {
   min-width: 25px;
 }
+
 .filter-menu-item .filter-item-icon:hover {
   cursor: pointer;
-  stroke: #438a14;
+  stroke: #428a13;
 }
 
 .MuiTypography-root.MuiFormControlLabel-label.MuiTypography-body1 {
@@ -49,6 +51,7 @@
   margin-left: 0px;
   color: #828282;
 }
+
 .filter-label-text .PrivateSwitchBase-root-4 {
   padding: 5px;
   margin-left:9px;
@@ -60,7 +63,7 @@
 }
 
 .apply-button-container .apply-button {
-  color: #438a14;
+  color: #428a13;
   font-weight: 600;
   margin-right:5px;
   font-size: .8em;
