--- a/app/javascript/packs/Lunch.css
+++ b/app/javascript/packs/Lunch.css
@@ -1,5 +1,4 @@
-/* Universal Styles */
-
+/* App Styles */
 html {
   font-size: 18px;
 }
@@ -7,18 +6,6 @@ body {
   margin: 0;
   background: #f8f8f8;
 }
-
-@media only screen and (max-width: 560px) {
-  html {
-    font-size: 15px;
-  }
-}
-
-input:focus {
-  outline: none;
-}
-
-/* App Styles */
 
 .App {
   font-family: 'Proxima Nova', Arial, sans-serif;
@@ -28,6 +15,10 @@ h1,h2,h3,h4,h5 {
   color: #7f7f7f;
 }
 
+input:focus {
+  outline: none;
+}
+
 .content-container {
   display: flex;
   max-width: 1024px;
@@ -35,9 +26,39 @@ h1,h2,h3,h4,h5 {
   justify-content: space-between;
 }
 
-@media only screen and (max-width: 780px) {
-  .content-container {
-    flex-direction: column;
-    padding: 0 20px;
+.mobile-switch-container button {
+  display:none;
+  position: fixed;
+  bottom: 40px;
+  left:0;
+  right: 0;
+  background: #428a13;
+  font-family: 'Proxima Nova', Arial, sans-serif;
+  font-size: 20px;
+  text-transform: capitalize;
+  padding: 10px 22px;
+  border-radius: 8px;
+  z-index: 99;
+}
+
+.mobile-switch-container button:hover {
+  background: #69a041;
+}
+
+.mobile-switch-container button .MuiButton-label {
+  display: flex;
+  align-items: center;
+}
+
+.mobile-switch-container button .mobile-switch-icon {
+  font-size: 34px;
+  margin-right: 7px;
+}
+
+@media only screen and (max-width: 680px) {
+  .mobile-switch-container button {
+    display: block;
+    margin: 0 auto;
   }
+
 }
