--- a/app/javascript/packs/components/GoogleMap/GoogleMap.css
+++ b/app/javascript/packs/components/GoogleMap/GoogleMap.css
@@ -1,7 +1,8 @@
-.map-container {
+#map-container {
   width: 70%;
   height: 600px;
   margin-left: 20px;
+  padding-top: 4em;
 }
 
 #map {
@@ -9,11 +10,24 @@
   width: 100%;
 }
 
+#info-content {
+  display: none;
+}
+
 
 @media only screen and (max-width: 780px) {
-  .map-container {
-    display: none;
+  #map-container {
+    width: 70%;
+    max-height: 100vh;
+    margin-left: 10px;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  #map-container {
     width: 100%;
     max-height: 100%;
+    margin-left: 0;
+    padding-top: 8em;
   }
 }
