--- a/app/javascript/packs/components/Header/Header.css
+++ b/app/javascript/packs/components/Header/Header.css
@@ -1,7 +1,9 @@
 .page-header {
+  position: fixed;
+  z-index: 999;
   background-color: #fff;
   width: 100%;
-  box-shadow: 0px 2px 6px 2px #E8E8E8;
+  box-shadow: 0px 2px 4px 2px rgba(0,0,0,0.05);
 }
 
 .header-container {
