--- a/app/javascript/packs/components/SearchBar/SearchBar.css
+++ b/app/javascript/packs/components/SearchBar/SearchBar.css
@@ -47,7 +47,7 @@
   margin-right: 2.22rem;
   border-radius: 10px;
   border: 1px solid #ddd;
-  font-size: .7rem;
+  font-size: 13px;
   color: #7f7f7f;
   font-weight: 600;
   box-shadow: 0px 2px 2px 0px rgb(0 0 0 / 10%)
@@ -66,14 +66,15 @@
 }
 
 .SearchBar-submit .search-icon {
-  fill: #438a14;
+  fill: #428a13;
   width: .8em;
   height: 1.2em;
+  font-size: 26px;
 }
+
 .SearchBar-submit .search-icon:hover {
   cursor: pointer;
 }
-
 
 .SearchBar-submit a:hover {
   cursor: pointer;
