--- a/app/javascript/packs/components/GoogleMap/GoogleMap.css
+++ b/app/javascript/packs/components/GoogleMap/GoogleMap.css
@@ -14,6 +14,11 @@
   display: none;
 }
 
+@media only screen and (max-width: 1600px) and (min-width: 680px)  {
+  #map-container {
+    display: block !important;
+  }
+}
 
 @media only screen and (max-width: 780px) {
   #map-container {
