--- a/app/javascript/packs/components/Business/Business.css
+++ b/app/javascript/packs/components/Business/Business.css
@@ -1,7 +1,7 @@
 .Business {
   display: flex;
   flex-direction: row;
-  margin-bottom: 1rem;
+  margin-bottom: 10px;
   border-radius: 10px;
   border: 1px solid #ddd;
   padding: 15px;
