--- a/app/javascript/packs/components/SearchBar/SearchBar.css
+++ b/app/javascript/packs/components/SearchBar/SearchBar.css
@@ -43,13 +43,13 @@
 .SearchBar-fields input {
   font-family: 'Proxima Nova', Arial, sans-serif;
   width: 302px;
-  padding: .5rem 1rem;
+  padding: .4rem 1rem;
   margin-right: 2.22rem;
-  border-radius: 10px;
+  border-radius: 7px;
   border: 1px solid #ddd;
   font-size: 13px;
   color: #7f7f7f;
-  font-weight: 600;
+  font-weight: 500;
   box-shadow: 0px 2px 2px 0px rgb(0 0 0 / 10%)
 }
 
@@ -59,16 +59,16 @@
 
 .SearchBar-submit {
   position: absolute;
-  right: 0;
-  font-size: 2em;
-  width: 1em;
+  right: 8px;
+  font-size: 1.8em;
+  width: .8em;
   text-align: center;
 }
 
 .SearchBar-submit .search-icon {
   fill: #428a13;
   width: .8em;
-  height: 1.2em;
+  height: 1em;
   font-size: 26px;
 }
 
