--- a/app/javascript/packs/components/BusinessList/BusinessList.css
+++ b/app/javascript/packs/components/BusinessList/BusinessList.css
@@ -27,9 +27,9 @@
   #BusinessList {
     display: none;
     width: 100%;
-    max-width: 340px;
     margin: 0 auto;
     max-height: 100%;
-    padding-top: 10em;
+    padding: 0 30px;
+    padding-top: 8em;
   }
 }
