--- a/app/javascript/packs/components/BusinessList/BusinessList.css
+++ b/app/javascript/packs/components/BusinessList/BusinessList.css
@@ -1,12 +1,14 @@
 #BusinessList {
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 31%;
-  max-height: 550px;
+  width: 23%;
+  max-height: 90vh;
   overflow-y: scroll;
-  margin-top: 1.5rem;
-  padding-top: 4em;
+  margin-top: 6rem;
+  margin-left: 2em;
+  z-index:9999;
 }
 
 @media only screen and (max-width: 1600px) and (min-width: 680px)  {
@@ -17,9 +19,11 @@
 
 @media only screen and (max-width: 780px) {
   #BusinessList {
+    position: relative;
     width: 40%;
     max-height: 450px;
     padding: 0 20px;
+    z-index:0;
   }
 }
 
