--- a/app/javascript/packs/components/Business/Business.css
+++ b/app/javascript/packs/components/Business/Business.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 7px;
-  border-radius: 10px;
+  border-radius: 100px;
   border: 1px solid #ddd;
   padding: 15px;
   background: #fff;
@@ -10,7 +10,7 @@
 
 .Business:hover {
   cursor: pointer;
-  border: 2px solid #428a13;
+  border: 2px solid #000;
 }
 
 .Business .image-container {
@@ -20,10 +20,12 @@
   background-color: #333;
   height: 65px;
   width: 65px;
+  border-radius: 40px;
 }
 
 .Business .image-container img {
   width:65px;
+  border-radius: 40px;
 }
 
 .Business-information {
@@ -55,7 +57,8 @@
 }
 
 .Business .favorite-icon {
-  fill: #c9c9c9;
+  display: none;
+  fill: #000;
   float: right;
   margin: -9px -8px 0;
   align-self: flex-start;
