--- a/app/javascript/packs/components/GoogleMap/GoogleMap.css
+++ b/app/javascript/packs/components/GoogleMap/GoogleMap.css
@@ -1,7 +1,7 @@
 #map-container {
-  width: 70%;
-  height: 600px;
-  margin-left: 20px;
+  width: 100%;
+  height: 100vh;
+  margin-left: 0;
   padding-top: 4em;
 }
 
