--- a/app/javascript/packs/components/SearchBar/SearchBar.css
+++ b/app/javascript/packs/components/SearchBar/SearchBar.css
@@ -5,35 +5,6 @@
   justify-content: center;
 }
 
-.SearchBar-sort-options ul {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 2.22rem;
-  color: #333;
-}
-
-.SearchBar-sort-options li {
-  cursor: pointer;
-  width: 4.33rem;
-  border-bottom: 1px solid #fff;
-  padding: 0 2.58rem .33rem 2.58rem;
-  line-height: 1.13;
-  text-align: center;
-  font-weight: 600;
-  font-size: .83rem;
-  transition: color .25s;
-}
-
-.SearchBar-sort-options li:hover {
-  color: #01665e;
-}
-
-.SearchBar-sort-options li.active,
-.SearchBar-sort-options li.active:hover {
-  border-bottom: 1px solid #00a89a;
-  color: #00a89a;
-}
-
 .SearchBar-fields {
   display: flex;
   justify-content: center;
@@ -43,14 +14,14 @@
 .SearchBar-fields input {
   font-family: 'Proxima Nova', Arial, sans-serif;
   width: 302px;
-  padding: .4rem 1rem;
+  padding: 12px;
   margin-right: 2.22rem;
-  border-radius: 7px;
+  border-radius: 40px;
   border: 1px solid #ddd;
-  font-size: 13px;
-  color: #7f7f7f;
+  font-size: 15px;
+  color: #aaa;
   font-weight: 500;
-  box-shadow: 0px 2px 2px 0px rgb(0 0 0 / 10%)
+  box-shadow: 0px 2px 2px 0px rgb(0 0 0 / .05%)
 }
 
 .SearchBar-fields input:last-child {
@@ -60,14 +31,15 @@
 .SearchBar-submit {
   position: absolute;
   right: 8px;
+  top: 4px;
   font-size: 1.8em;
-  width: .8em;
+  width: 1em;
   text-align: center;
 }
 
 .SearchBar-submit .search-icon {
-  fill: #428a13;
-  width: .8em;
+  fill: #aaa;
+  width: 1em;
   height: 1em;
   font-size: 26px;
 }
